[gd_scene load_steps=9 format=3 uid="uid://xmelrdlppcbt"]

[ext_resource type="Texture2D" uid="uid://d2ebqqdlvm41x" path="res://Assets/Board.png" id="1_8hyui"]
[ext_resource type="Script" path="res://Scenes/gameplay.gd" id="1_af0ld"]
[ext_resource type="PackedScene" uid="uid://dgt3sfdeg05nl" path="res://Scenes/player_paddle.tscn" id="2_awkc1"]
[ext_resource type="PackedScene" uid="uid://2scb1wys55g8" path="res://Scenes/enemy_paddle.tscn" id="3_1b8t0"]
[ext_resource type="PackedScene" uid="uid://did5coee5pc6b" path="res://Scenes/ball.tscn" id="4_4vrvh"]
[ext_resource type="PackedScene" uid="uid://m4qcsiiiy0ee" path="res://Scenes/UI.tscn" id="6_aff0b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uobgn"]
size = Vector2(1304, 75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_svkqj"]
size = Vector2(75, 648.5)

[node name="Gameplay" type="Node2D"]
script = ExtResource("1_af0ld")

[node name="Board" type="Sprite2D" parent="."]
position = Vector2(575, 319)
scale = Vector2(2, 2)
texture = ExtResource("1_8hyui")

[node name="Bounds" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Bounds" groups=["Bounds"]]
position = Vector2(575, -66)
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/StaticBody2D"]
position = Vector2(2, 27.5)
shape = SubResource("RectangleShape2D_uobgn")

[node name="StaticBody2D2" type="StaticBody2D" parent="Bounds" groups=["Bounds"]]
position = Vector2(575, 661)
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/StaticBody2D2"]
position = Vector2(3.5, 27.5)
shape = SubResource("RectangleShape2D_uobgn")

[node name="ScoreZones" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="ScoreZones"]
position = Vector2(-66, 330)
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreZones/Area2D"]
position = Vector2(27.5, -4.25)
shape = SubResource("RectangleShape2D_svkqj")

[node name="Area2D2" type="Area2D" parent="ScoreZones"]
position = Vector2(1165, 329)
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreZones/Area2D2"]
position = Vector2(27.5, -4)
shape = SubResource("RectangleShape2D_svkqj")

[node name="Paddles" type="Node2D" parent="."]

[node name="PlayerPaddle" parent="Paddles" instance=ExtResource("2_awkc1")]
position = Vector2(1144, 324)

[node name="EnemyPaddle" parent="Paddles" instance=ExtResource("3_1b8t0")]
position = Vector2(12, 324)

[node name="BallStartPos" type="Marker2D" parent="."]
position = Vector2(575, 315)

[node name="Ball" parent="BallStartPos" instance=ExtResource("4_4vrvh")]

[node name="NewBallTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="UI" parent="." instance=ExtResource("6_aff0b")]

[connection signal="body_entered" from="ScoreZones/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="ScoreZones/Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="timeout" from="NewBallTimer" to="." method="_on_new_ball_timer_timeout"]
